# expensetracker

./: README.md  database.py  expenses.db  expensetracker.py  main.py  models.py  pyproject.toml  requirements.txt
src/expensetracker/: __init__.py
static/: expenses.html  landing.html
tests/: test_getexpenses.py  test_login.py  test_postexpense.py  test_reg.py
