[project]
name = "expensetracker"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Uğur Baştuğ", email = "bastugugur85@gmail.com" }
]
dependencies = [
    "fastapi>=0.116.1",
    "passlib>=1.7.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/expensetracker"]
